tests/baselines/reference/symbolProperty50.errors.txt
symbolProperty50.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== symbolProperty50.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface Symbol { }
    
        class C {
            [Symbol.iterator]() { }
        }
    }